--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     
     <header>
         <div class="navbar">
-            
+            <div class="bar">Home</div>
+            <div class="bar">O nas</div>
+            <div class="bar">Kaboob</div>
         </div>
     </header>
     <main>
-<img src="yeal.jpg">
-        <p>sussy baki</p>
+        <img src="https://img.redro.pl/obrazy/capybara-700-219670412.jpg" alt="carpincho">
     </main>
     <footer>
 
