--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rattus rattus sussus</title>
     <link rel="stylesheet" href="reset.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     
     <header>
         <div class="navbar">
-            <div class="bar">Home</div>
-            <div class="bar">O nas</div>
-            <div class="bar">Kaboob</div>
+            <a href="#"><div class="bar">Home</div></a>
+            <a href="#about"><div class="bar">O nas</div></a>
+            <a href="#dol"><div class="bar">Kaboob</div></a>
         </div>
     </header>
     <main>
-        <img src="https://img.redro.pl/obrazy/capybara-700-219670412.jpg" alt="carpincho">
+        <div class="container">
+            <img src="https://img.redro.pl/obrazy/capybara-700-219670412.jpg" class="img-fluid" alt="carpincho">
+            <p class="text-center srodek" id="row">Duzy wlochaty sus naziemny</p>
+        </div>
+        
     </main>
-    <footer>
+    <footer id="dol">
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
