--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
         </div>
     </header>
     <main>
-        <div class="container">
+        <div class="kontener">
             <img src="https://img.redro.pl/obrazy/capybara-700-219670412.jpg" class="img-fluid" alt="carpincho">
-            <p class="text-center srodek" id="row">Duzy wlochaty sus naziemny</p>
+            <div class="srodek bezramki">
+                <p class="text-center srodek" id="row">Duzy wlochaty sus naziemny</p>
+            </div>
         </div>
         
     </main>
     <footer id="dol">
-
+        <!-- Mysz domowa, szczur wędrowny, kapibara wielka, Nieświszczuk płowy, bubr -->
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
