--- a/index.html
+++ b/index.html
@@ -10,15 +10,57 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
     <header>
-        <div class="navbar">
-            <a href="#"><div class="bar">Home</div></a>
-            <a href="#about"><div class="bar">O nas</div></a>
-            <a href="#dol"><div class="bar">Kaboob</div></a>
+      <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Top 5 Gryzoni</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="https://www.dragovich.dk">Strona główna</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Formularz kontaktowy</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Zwierzęta przedstawione na stronie
+                    <!-- 5 Mysz domowa, 2 szczur wędrowny, 1 kapibara wielka, 4 Nieświszczuk płowy, 3 bubr  -->
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                    <li><a class="dropdown-header text-black h4">1. Kapibara Wielka</a></li>
+                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka">Wikipedia</a></li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
         </div>
+      </nav>
+      <br><br><br><br><br><br><br><br><br>
     </header>
     <main>
+        <div class="box blefttop"></div>
+        <div class="box brighttop"></div>
+        <div class="box bleftbot"></div>
+        <div class="box brightbot"></div>
+        <br>
         <div class="kontener">
             <img src="https://img.redro.pl/obrazy/capybara-700-219670412.jpg" class="img-fluid" alt="carpincho">
             <div class="srodek bezramki">
@@ -27,8 +69,57 @@
         </div>
         
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <footer id="dol">
-        <!-- Mysz domowa, szczur wędrowny, kapibara wielka, Nieświszczuk płowy, bubr -->
+        <!-- 5 Mysz domowa, 2 szczur wędrowny, 1 kapibara wielka, 4 Nieświszczuk płowy, 3 bubr  -->
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
