--- a/index.html
+++ b/index.html
@@ -5,50 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rattus rattus sussus</title>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="/css/reset.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-      <nav class="navbar navbar-light bg-light">
+      <!--                    Navbar                       -->
+      <nav class="navbar navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Top 5 Gryzoni</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+          <a class="navbar-brand custom-google-font" href="https://www.dragovich.dk" style="color: rgba(55, 55, 55, 0.75); font-size: 200%;"><b>Top 5 Gryzoni</b></a>
+          <button class="navbar-toggler ml-auto custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel" style="background-color: darksalmon;">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+              <h5 class="offcanvas-title" id="offcanvasNavbarLabel" style="color: rgba(55, 55, 55, 0.90);">Top 5 Gryzoni</h5>
               <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="https://www.dragovich.dk">Strona główna</a>
-                </li>
+                  <a class="nav-link active" aria-current="page" href="https://www.dragovich.dk" style="color: rgba(55, 55, 55, 0.90);">Strona główna</a>
+                </li><br>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Formularz kontaktowy</a>
-                </li>
+                  <a class="nav-link" href="/podstrony/kontakt.html" style="color: rgba(55, 55, 55, 0.90);">Formularz kontaktowy</a>
+                </li><br>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: rgba(55, 55, 55, 0.90);">
                     Zwierzęta przedstawione na stronie
-                    <!-- 5 Mysz domowa, 2 szczur wędrowny, 1 kapibara wielka, 4 Nieświszczuk płowy, 3 bubr  -->
                   </a>
-                  <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                    <li><a class="dropdown-header text-black h4">1. Kapibara Wielka</a></li>
-                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka">Wikipedia</a></li>
+                  <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown" style="background-color: rgb(241, 172, 149);">
+                    <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">1. Kapibara Wielka</a></li>
+                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">2. Szczur Wędrowny</a></li>
+                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">3. Wielkofutrzak Sulaweski</a></li>
+                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">4. Nieświszczuk Płowy</a></li>
+                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">5. Bober Janek</a></li>
+                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
                   </ul>
                 </li>
               </ul>
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
             </div>
           </div>
         </div>
@@ -56,10 +71,53 @@
       <br><br><br><br><br><br><br><br><br>
     </header>
     <main>
-        <div class="box blefttop"></div>
-        <div class="box brighttop"></div>
-        <div class="box bleftbot"></div>
-        <div class="box brightbot"></div>
+      
+      <div class="kontener-siatka">
+        <div class="empty">1</div>
+        <!--SLIDER-->
+        <div class="slider">
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/img/IMG1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/img/IMG2.png" class="d-block w-100" alt="..." style="height: 100px; width: 150px;">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/img/IMG3.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <div class="empty2">3</div>
+      </div>
+
         <br>
         <div class="kontener">
             <img src="https://img.redro.pl/obrazy/capybara-700-219670412.jpg" class="img-fluid" alt="carpincho">
