--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <br><br><br><br><br><br><br><br><br>
     </header>
     <main>
-      
+
       <div class="kontener-siatka">
         <div class="empty">1</div>
         <!--SLIDER-->
@@ -86,36 +86,91 @@
               <div class="carousel-item active">
                 <img src="/img/IMG1.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5 class="carousel-tytul custom-google-font"><b>Wielkofutrzak Sulaweski</b></h5>
+                  <!--        <p>Some representative placeholder content for the first slide.</p>                -->
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/img/IMG2.png" class="d-block w-100" alt="..." style="height: 100px; width: 150px;">
+                <img src="/img/IMG2.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5 class="carousel-tytul custom-google-font"><b>Nieświszczuk Płowy</b></h5>
+                  <!--        <p>Some representative placeholder content for the first slide.</p>                -->
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="/img/IMG3.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5 class="carousel-tytul custom-google-font"><b>Szczur Wędrowny</b></h5>
+                  <!--        <p>Some representative placeholder content for the first slide.</p>                -->
                 </div>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+              <span class="visually-hidden">Poprzedni</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+              <span class="visually-hidden">Następny</span>
             </button>
           </div>
         </div>
         <div class="empty2">3</div>
+      </div>
+
+<div><br><br><br><br></div>
+
+      <div class="ranking-karty">
+        <div class="top1">
+          <div class="card" style="width: auto; background: rgb(231,69,92); background: radial-gradient(circle, rgba(231,69,92,1) 23%, rgba(233,150,122,1) 100%);">
+            <img src="/img/KARTA_RANKING_TOP1.png" class="card-img-top" alt="1. Kapibara Wielka">
+            <div class="card-body">
+              <h5 class="card-title">1. Kapibara Wielka</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-dark">Więcej informacji...</a>
+            </div>
+          </div>
+        </div>
+        <div class="top2">
+          <div class="card" style="width: auto; background: rgb(231,69,92); background: radial-gradient(circle, rgba(231,69,92,1) 23%, rgba(233,150,122,1) 100%);">
+            <img src="/img/KARTA_RANKING_TOP2.png" class="card-img-top" alt="2. Szczur Wędrowny">
+            <div class="card-body">
+              <h5 class="card-title">2. Szczur Wędrowny</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-dark">Więcej informacji...</a>
+            </div>
+          </div>
+        </div>
+        <div class="top3">
+          <div class="card" style="width: auto; background: rgb(231,69,92); background: radial-gradient(circle, rgba(231,69,92,1) 23%, rgba(233,150,122,1) 100%);">
+            <img src="/img/KARTA_RANKING_TOP3.png" class="card-img-top" alt="3. Wielkofutrzak Sulaweski">
+            <div class="card-body">
+              <h5 class="card-title">3. Wielkofutrzak Sulaweski</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-dark">Więcej informacji...</a>
+            </div>
+          </div>
+        </div>
+        <div class="top4">
+          <div class="card" style="width: auto; background: rgb(231,69,92); background: radial-gradient(circle, rgba(231,69,92,1) 23%, rgba(233,150,122,1) 100%);">
+            <img src="/img/KARTA_RANKING_TOP4.png" class="card-img-top" alt="4. Nieświszczuk Płowy">
+            <div class="card-body">
+              <h5 class="card-title">4. Nieświszczuk Płowy</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-dark">Więcej informacji...</a>
+            </div>
+          </div>
+        </div>
+        <div class="top5">
+          <div class="card" style="width: auto; background: rgb(231,69,92); background: radial-gradient(circle, rgba(231,69,92,1) 23%, rgba(233,150,122,1) 100%);">
+            <img src="/img/KARTA_RANKING_TOP5.png" class="card-img-top" alt="5. Bober">
+            <div class="card-body">
+              <h5 class="card-title">5. Bober</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-dark">Więcej informacji...</a>
+            </div>
+          </div>
+        </div>
       </div>
 
         <br>
