--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <a class="nav-link active" aria-current="page" href="https://www.dragovich.dk" style="color: rgba(55, 55, 55, 0.90);">Strona główna</a>
                 </li><br>
                 <li class="nav-item">
-                  <a class="nav-link" href="./podstrony/formkontakt.html" style="color: rgba(55, 55, 55, 0.90);">Formularz kontaktowy</a>
+                  <a class="nav-link" href="./formkontakt.html" style="color: rgba(55, 55, 55, 0.90);">Formularz kontaktowy</a>
                 </li><br>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: rgba(55, 55, 55, 0.90);">
@@ -47,27 +47,27 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown" style="background-color: rgb(241, 172, 149);">
                     <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">1. Kapibara Wielka</a></li>
-                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
+                    <li><a class="dropdown-item" href="https://fera.pl/kapibara-jak-wyglada-i-jakie-ma-obyczaje-najwiekszy-gryzon-na-swiecie.html" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
                     <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">2. Szczur Wędrowny</a></li>
-                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
+                    <li><a class="dropdown-item" href="https://tedan.pl/baza-wiedzy/szczur-wedrowny-informacje-opis/" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
                     <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">3. Skoczanka przylądkowa</a></li>
-                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
+                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Skoczanka_przyl%C4%85dkowa" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
                     <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">4. Nieświszczuk Płowy</a></li>
-                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
+                    <li><a class="dropdown-item" href="https://fera.pl/piesek-preriowy-nieswiszczuk-najwazniejsze-informacje-o-gatunku.html" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
                     <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">5. Bober Janek</a></li>
-                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
+                    <li><a class="dropdown-item" href="https://www.lasy.gov.pl/pl/edukacja/lesnoteka-1/ssaki/bobr-europejski" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
                   </ul>
                 </li>
               </ul>
@@ -91,24 +91,22 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/Desmodillus_auricularis.jpg" class="d-block w-100" alt="...">
+                <img src="./img/Skoczanka.jpg" class="d-block w-100">
                 <div class="carousel-caption d-none d-md-block">
                   <h5 class="carousel-tytul custom-google-font"><b>Skoczanka przylądkowa</b></h5>
-                  <!--        <p>Some representative placeholder content for the first slide.</p>                -->
                 </div>
+                
               </div>
               <div class="carousel-item">
-                <img src="./img/IMG2.png" class="d-block w-100" alt="...">
+                <img src="./img/IMG2.png" class="d-block w-100">
                 <div class="carousel-caption d-none d-md-block">
                   <h5 class="carousel-tytul custom-google-font"><b>Nieświszczuk Płowy</b></h5>
-                  <!--        <p>Some representative placeholder content for the first slide.</p>                -->
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./img/IMG3.png" class="d-block w-100" alt="...">
+                <img src="./img/IMG3.png" class="d-block w-100">
                 <div class="carousel-caption d-none d-md-block">
                   <h5 class="carousel-tytul custom-google-font"><b>Szczur Wędrowny</b></h5>
-                  <!--        <p>Some representative placeholder content for the first slide.</p>                -->
                 </div>
               </div>
             </div>
@@ -125,60 +123,64 @@
         <div class="empty2">3</div>
       </div>
 
+      
+
+
 <div><br><br><br><br></div>
 
-      <div class="ranking-karty">
-        <div class="top1">
-          <div class="card karta">
-            <img src="./img/KARTA_RANKING_TOP1.png" class="card-img-top kartazdjecie" alt="1. Kapibara Wielka">
-            <div class="card-body">
-              <h5 class="card-title">1. Kapibara Wielka</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-dark klej">Więcej informacji...</a>
-            </div>
-          </div>
-        </div>
-        <div class="top2">
-          <div class="card karta">
-            <img src="./img/KARTA_RANKING_TOP2.png" class="card-img-top  kartazdjecie" alt="2. Szczur Wędrowny">
-            <div class="card-body">
-              <h5 class="card-title">2. Szczur Wędrowny</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-dark klej">Więcej informacji...</a>
-            </div>
-          </div>
-        </div>
-        <div class="top3">
-          <div class="card karta">
-            <img src="https://content.eol.org/data/media/91/95/cf/740.015388-1.jpg" class="card-img-top kartazdjecie" alt="3. Skoczanka przylądkowa">
-            <div class="card-body">
-              <h5 class="card-title">3. Skoczanka przylądkowa</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-dark klej">Więcej informacji...</a>
-            </div>
-          </div>
-        </div>
-        <div class="top4">
-          <div class="card karta">
-            <img src="./img/KARTA_RANKING_TOP4.png" class="card-img-top kartazdjecie" alt="4. Nieświszczuk Płowy">
-            <div class="card-body">
-              <h5 class="card-title">4. Nieświszczuk Płowy</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-dark klej">Więcej informacji...</a>
-            </div>
-          </div>
-        </div>
-        <div class="top5">
-          <div class="card karta">
-            <img src="./img/KARTA_RANKING_TOP5.png" class="card-img-top kartazdjecie" alt="5. Bober">
-            <div class="card-body">
-              <h5 class="card-title">5. Bober</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-dark klej">Więcej informacji...</a>
-            </div>
-          </div>
-        </div>
+<div class="ranking-karty">
+  <div class="top1">
+    <div class="card karta">
+      <img src="./img/KARTA_RANKING_TOP1.png" class="card-img-top kartazdjecie" alt="1. Kapibara Wielka">
+      <div class="card-body">
+        <h5 class="card-title">1. Kapibara Wielka</h5>
+        <p class="card-text">Obecnie największy gatunek gryzonia na świecie - jego waga dochodzi do 65kg! Zamieszkuje tereny Ameryki Południowej.</p>
+        <a href="#" class="btn btn-dark klej">Więcej informacji...</a>
       </div>
+    </div>
+  </div>
+  <div class="top2">
+    <div class="card karta">
+      <img src="./img/KARTA_RANKING_TOP2.png" class="card-img-top  kartazdjecie" alt="2. Szczur Wędrowny">
+      <div class="card-body">
+        <h5 class="card-title">2. Szczur Wędrowny</h5>
+        <p class="card-text">Oryginalnie wywodzi się z Azji Południowo-Wschodniej, jednak dzięki człowiekowi skolonizował wszystkie kontynenty poza antarktydą.</p>
+        <a href="#" class="btn btn-dark klej">Więcej informacji...</a>
+      </div>
+    </div>
+  </div>
+  <div class="top3">
+    <div class="card karta">
+      <img src="./img/175391.jpg" class="card-img-top kartazdjecie" alt="3. Skoczanka przylądkowa">
+      <a href="https://www.biolib.cz/en/image/id175391/">Autor: Klaus Rudloff</a>
+      <div class="card-body">
+        <h5 class="card-title">3. Skoczanka przylądkowa</h5>
+        <p class="card-text">Dzięki specjalnym procesom metabolicznym, całą potrzebną im wodę uzyskują z pożywienia.</p>
+        <a href="#" class="btn btn-dark klej">Więcej informacji...</a>
+      </div>
+    </div>
+  </div>
+  <div class="top4">
+    <div class="card karta">
+      <img src="./img/KARTA_RANKING_TOP4.png" class="card-img-top kartazdjecie" alt="4. Nieświszczuk Płowy">
+      <div class="card-body">
+        <h5 class="card-title">4. Nieświszczuk Płowy</h5>
+        <p class="card-text">System komunikatów używany przez te Pieski Preriowe uważany jest za jeden z najbardziej zaawansowanych wśród zwierząt.</p>
+        <a href="#" class="btn btn-dark klej">Więcej informacji...</a>
+      </div>
+    </div>
+  </div>
+  <div class="top5">
+    <div class="card karta">
+      <img src="./img/KARTA_RANKING_TOP5.png" class="card-img-top kartazdjecie" alt="5. Bober">
+      <div class="card-body">
+        <h5 class="card-title">5. Bóbr Kanadyjski</h5>
+        <p class="card-text">Największa zbudowana przez niego tama miała długość 700m i była w stanie utrzymać konia z jeźdźcem!</p>
+        <a href="#" class="btn btn-dark klej">Więcej informacji...</a>
+      </div>
+    </div>
+  </div>
+</div>
 
         <br>
         <div class="kontener">
@@ -199,7 +201,7 @@
           <ul class="list-inline">
               <li class="list-inline-item"><a href="#">Strona główna</a></li>
               <li class="list-inline-item"><a href="./podstrony/formkontakt.html">Kontakt</a></li>
-              <li class="list-inline-item"><a href="#">O nas</a></li>
+              <li class="list-inline-item"><a data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">O nas</li>
           </ul>
           <p class="copyright">DragoKuma© 2022</p>
       </footer>
