--- a/formkontakt.html
+++ b/formkontakt.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
 </head>
 <body>
 
@@ -120,10 +121,10 @@
         <div class="formbuilder-checkbox-group form-group field-checkbox-group-1648794669542">
             <label for="checkbox-group-1648794669542" class="formbuilder-checkbox-group-label"><span class="formbuilder-required">*</span></label>
             <div class="checkbox-group">
-                <div class="formbuilder-checkbox">
-                    <input class="" name="checkbox-group-1648794669542[]" access="false" id="checkbox-group-1648794669542-0" aria-required="true" value="data" type="checkbox" checked="checked">
-                    <label for="checkbox-group-1648794669542-0">Wyrażam zgodę na przetwarzanie moich danych osobowych przez dragovich.dk S.A., ul. Strzelecka 9, 84-200 Wejherowo w celu i w zakresie niezbędnym do realizacji obsługi niniejszego zgłoszenia. Zapoznałem się z treścią informacji o sposobie przetwarzania moich danych osobowych jak w załączniku.</label>
-                </div>
+              <div class="formbuilder-checkbox">
+                <input type="checkbox" name="tak" id="">
+                <label>Wyrażam zgodę na przetwarzanie moich danych osobowych przez dragovich.dk S.A., ul. Strzelecka 9, 84-200 Wejherowo w celu i w zakresie niezbędnym do realizacji obsługi niniejszego zgłoszenia. Zapoznałem się z treścią informacji o sposobie przetwarzania moich danych osobowych jak w załączniku.</label>
+            </div>
             </div>
         </div>
         <div class="div-srodek">
