--- a/formkontakt.html
+++ b/formkontakt.html
@@ -9,21 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icon.ico" type="image/x-icon">
 </head>
 <body>
-
-  <!-- https://www.biolib.cz/en/image/id175396/ zdjecia skoczanki -->
-
     <header>
       <!--                    Navbar                       -->
-      <nav class="navbar navbar-dark">
+      <nav class="navbar navbar-dark custom-google-font">
         <div class="container-fluid">
-          <a class="navbar-brand custom-google-font" href="https://www.dragovich.dk" style="color: rgba(55, 55, 55, 0.75); font-size: 200%;"><b>Top 5 Gryzoni</b></a>
+          <a class="navbar-brand" href="./index.html" style="color: rgba(55, 55, 55, 0.75); font-size: 200%;"><b>Top 5 Gryzoni</b></a>
           <button class="navbar-toggler ml-auto custom-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -35,10 +32,10 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="https://www.dragovich.dk" style="color: rgba(55, 55, 55, 0.90);">Strona główna</a>
+                  <a class="nav-link active" aria-current="page" href="./index.html" style="color: rgba(55, 55, 55, 0.90);">Strona główna</a>
                 </li><br>
                 <li class="nav-item">
-                  <a class="nav-link" href="/podstrony/kontakt.html" style="color: rgba(55, 55, 55, 0.90);">Formularz kontaktowy</a>
+                  <a class="nav-link" href="./formkontakt.html" style="color: rgba(55, 55, 55, 0.90);">Formularz kontaktowy</a>
                 </li><br>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: rgba(55, 55, 55, 0.90);">
@@ -65,8 +62,8 @@
                     <li>
                       <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">5. Bober Janek</a></li>
-                    <li><a class="dropdown-item" href="https://pl.wikipedia.org/wiki/Kapibara_wielka" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
+                    <li><a class="dropdown-header text-black h4" style="color: rgba(55, 55, 55, 0.90);">5. Bóbr Kanadyjski</a></li>
+                    <li><a class="dropdown-item" href="http://projekty.gdos.gov.pl/igo-castor-canadensis" style="color: rgba(55, 55, 55, 0.90);">Źródło informacji o tym zwierzęciu</a></li>
                   </ul>
                 </li>
               </ul>
@@ -74,34 +71,38 @@
           </div>
         </div>
       </nav>
-      <br><br><br><br><br><br><br><br><br>
+      <br><br><br><br>
+      <div class="spanttl">
+      <h2 class="custom-google-font">Formularz Kontaktowy</h2>
+      </div>
+      <br><br><br>
     </header>
     <main>
       <form action="..." method="post">
-      <div class="rendered-form form-positioning">
+      <div class="rendered-form form-positioning custom-google-font">
         <div class="">
-            <h1 access="false" id="control-3380901">Dane kontaktowe</h1></div>
+            <h1 access="false" id="control-3380901" class="darksalmon">Dane kontaktowe</h1></div>
         <div class="formbuilder-text form-group field-text-1648794232463">
-            <label for="text-1648794232463" class="formbuilder-text-label"><span class="formbuilder-required">*</span></label>
-            <input type="text" placeholder="Imie i nazwisko" class="form-control" name="text-1648794232463" access="false" id="text-1648794232463" required="required" aria-required="true">
+            <label for="text-1648794232463" class="formbuilder-text-label"><span class="formbuilder-required">Podaj swoje imię i nazwisko:</span></label>
+            <input type="text" placeholder="Imie i nazwisko" class="form-control input-style" name="text-1648794232463" access="false" id="text-1648794232463" required="required" aria-required="true">
         </div>
         <div class="formbuilder-text form-group field-text-1648794230742">
-            <label for="text-1648794230742" class="formbuilder-text-label"><span class="formbuilder-required">*</span></label>
-            <input type="email" placeholder="E-mail" class="form-control" name="text-1648794230742" access="false" id="text-1648794230742" required="required" aria-required="true">
+            <label for="text-1648794230742" class="formbuilder-text-label"><span class="formbuilder-required">Podaj e-mail który posłuży do kontaktu zwrotnego:</span></label>
+            <input type="email" placeholder="E-mail" class="form-control input-style" name="text-1648794230742" access="false" id="text-1648794230742" required="required" aria-required="true">
         </div>
         <div class="formbuilder-text form-group field-text-1648794233974">
-            <label for="text-1648794233974" class="formbuilder-text-label"><span class="formbuilder-required">*</span></label>
-            <input type="tel" placeholder="Telefon komórkowy (+48)" class="form-control" name="text-1648794233974" access="false" maxlength="9" id="text-1648794233974" required="required" aria-required="true">
+            <label for="text-1648794233974" class="formbuilder-text-label"><span class="formbuilder-required">Podaj numer telefonu służący do weryfikacji tożsamości:</span></label>
+            <input type="tel" placeholder="Telefon komórkowy (+48)" class="form-control input-style" name="text-1648794233974" access="false" maxlength="9" id="text-1648794233974" required="required" aria-required="true">
         </div>
         <div class="">
-            <h1 access="false" id="control-1954863">Treść wiadomości</h1></div>
+            <h1 access="false" id="control-1954863" class="darksalmon">Temat oraz treść wiadomości</h1></div>
         <div class="formbuilder-text form-group field-text-1648794415638">
-            <label for="text-1648794415638" class="formbuilder-text-label"><span class="formbuilder-required">*</span></label>
-            <input type="text" placeholder="Temat" class="form-control" name="text-1648794415638" access="false" maxlength="64" id="text-1648794415638" required="required" aria-required="true">
+            <label for="text-1648794415638" class="formbuilder-text-label"><span class="formbuilder-required">Podaj temat zgłoszenia:</span></label>
+            <input type="text" placeholder="Temat" class="form-control input-style" name="text-1648794415638" access="false" maxlength="64" id="text-1648794415638" required="required" aria-required="true">
         </div>
         <div class="formbuilder-select form-group field-select-1648794434479">
-            <label for="select-1648794434479" class="formbuilder-select-label"><span class="formbuilder-required">*</span></label>
-            <select class="form-control" name="select-1648794434479" id="select-1648794434479" required="required" aria-required="true">
+            <label for="select-1648794434479" class="formbuilder-select-label"><span class="formbuilder-required">Wybierz kategorię w jakiej mieści się wiadomość:</span></label>
+            <select class="form-control input-style2" name="select-1648794434479" id="select-1648794434479" required="required" aria-required="true">
                 <option disabled="null" selected="null">Kategoria</option>
                 <option value="content" id="select-1648794434479-0">Treść na stronie</option>
                 <option value="errors" id="select-1648794434479-1">Błędy strony</option>
@@ -109,17 +110,17 @@
             </select>
         </div>
         <div class="formbuilder-textarea form-group field-textarea-1648794439669">
-            <label for="textarea-1648794439669" class="formbuilder-textarea-label"><span class="formbuilder-required">*</span></label>
+            <label for="textarea-1648794439669" class="formbuilder-textarea-label"><span class="formbuilder-required">Opisz w tym oknie swój problem/spostrzeżenie:</span></label>
             <textarea type="textarea" placeholder="Wiadomość" class="form-control input-style" name="textarea-1648794439669" access="false" maxlength="350" id="textarea-1648794439669" required="required" aria-required="true"></textarea>
         </div>
         <div class="">
-            <h1 access="false" id="control-8014393">Dołącz plik</h1></div>
+            <h1 access="false" id="control-8014393" class="darksalmon">Dołącz plik</h1></div>
         <div class="formbuilder-file form-group field-file-1648794617128">
             <label for="file-1648794617128" class="formbuilder-file-label"></label>
-            <input type="file" placeholder="Wybierz plik z dysku" class="form-control" name="file-1648794617128[]" access="false" multiple="true" id="file-1648794617128">
+            <input type="file" placeholder="Wybierz plik z dysku" class="form-control input-style2" name="file-1648794617128[]" access="false" multiple="true" id="file-1648794617128">
         </div>
         <div class="formbuilder-checkbox-group form-group field-checkbox-group-1648794669542">
-            <label for="checkbox-group-1648794669542" class="formbuilder-checkbox-group-label"><span class="formbuilder-required">*</span></label>
+            <label for="checkbox-group-1648794669542" class="formbuilder-checkbox-group-label"><span class="formbuilder-required"></span></label>
             <div class="checkbox-group">
               <div class="formbuilder-checkbox">
                 <input type="checkbox" name="tak" id="">
@@ -128,24 +129,24 @@
             </div>
         </div>
         <div class="div-srodek">
-          <button class="button-64 div-srodek" role="button"><span class="text">Prześlij wiadomość</span></button>
+          <button class="button-64 div-srodek" role="button"><span class="text custom-google-font">Prześlij wiadomość</span></button>
         </div>
     </div>
   </form>
     </main>
-
+<div><br><br></div>
 
 
     
-    <div class="footer-basic">
+    <div class="footer-basic custom-google-font">
       <footer>
-          <div class="social"><a data-bs-toggle="tooltip" data-bs-placement="top" title="Repozytorium" href="https://github.com/Dragovich23/zadaniegrupowe "><i class="icon ion-social-github"></i></a><a data-bs-toggle="tooltip" data-bs-placement="top" title="Pobierz pliki z repozytorium" href="https://github.com/Dragovich23/zadaniegrupowe/archive/refs/heads/main.zip"><i class="icon ion-code-download"></i></a><a data-bs-toggle="tooltip" data-bs-placement="top" title="Kontakt z autorem" href="mailto:lukaszzys1@gmail.com"><i class="icon ion-android-mail"></i></a></div>
+          <div class="social"><a data-bs-toggle="tooltip" data-bs-placement="top" title="Repozytorium" href="https://github.com/Dragovich23/zadaniegrupowe" target="_blank"><i class="icon ion-social-github"></i></a><a data-bs-toggle="tooltip" data-bs-placement="top" title="Pobierz pliki z repozytorium" href="https://github.com/Dragovich23/zadaniegrupowe/archive/refs/heads/main.zip"><i class="icon ion-code-download"></i></a><a data-bs-toggle="tooltip" data-bs-placement="top" title="Kontakt z autorem" href="mailto:lukaszzys1@gmail.com"><i class="icon ion-android-mail"></i></a></div>
           <ul class="list-inline">
-              <li class="list-inline-item"><a href="#">Strona główna</a></li>
+              <li class="list-inline-item"><a href="./index.html">Strona główna</a></li>
               <li class="list-inline-item"><a href="#">Kontakt</a></li>
-              <li class="list-inline-item"><a href="#">O nas</a></li>
+              <li class="list-inline-item"><a href="./onas.html">O nas</a></li>
           </ul>
-          <p class="copyright">DragoKuma© 2022</p>
+          <p class="copyright">2022 - Dragovich & Kuma&copy;</p>
       </footer>
   </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
